--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="A Twitter clone project for practice of Tailwind CSS and JavaScript.">
     <link rel="stylesheet" href="css/output.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
         integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg=="
@@ -172,7 +173,7 @@
             <div class="spinner flex items-center justify-center p-4 text-8xl text-blue-400 cursor-wait"><span
                     class="material-symbols-outlined  animate-spin">progress_activity</span></div>
         </div>
-        <div class="part-3 sticky top-0 text-white">
+        <div class="hidden md:block part-3 sticky top-0 text-white">
             <div class=" z-10 pt-4  bg-black pb-2">
                 <div
                     class="search-bar w-full flex items-center gap-5 px-4 ml-4 bg-gray-500 opacity-25 h-10 rounded-full text-white">
