--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
         href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
         rel="stylesheet">
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <link rel="shortcut icon" href="favicon.ico?" type="image/x-icon">
+    <link rel="icon" href="favicon.ico?" type="image/x-icon">
     <title>Twitter | Yuvraj</title>
 </head>
 
@@ -398,6 +400,10 @@
             $(this).remove()
         })
         post_create(content);
+        if (window.matchMedia("(orientation: portrait)").matches) {
+            post_create(content);
+            post_create(content);
+        }
     })
 
     $('.following').click(function () {
@@ -415,6 +421,10 @@
             $(this).remove()
         })
         post_create(content);
+        if (window.matchMedia("(orientation: portrait)").matches) {
+            post_create(content);
+            post_create(content);
+        }
     })
 
     $('.show-more').click(function () {
