--- a/index.html
+++ b/index.html
@@ -353,7 +353,7 @@
                         </div>
                         <div class="text pt-4">
                             <div class="header flex gap-1 items-center">
-                                <a class="hover:underline cursor-pointer"><b>`+ name + `</b></a>
+                                <p class="hover:underline cursor-pointer"><b>`+ name + `</b></p>
                                 <img class="w-[1.25rem]" src="ver.png" alt="verified">
                                 <span class="text-gray-500">@`+ id + `</span>
                                 <span class="text-gray-500">·</span>
